--- a/css/style.css
+++ b/css/style.css
@@ -284,23 +284,49 @@ body{
 .flex{
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: column;
+	flex-direction: row;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 600px){
 
+	.nav{
+		margin-left: -20px
+	}
 	.nav__list-item{
 	padding: 0.5em;
 	border-radius: 7px;
-	margin-left: 0.5em;
+	margin-left: 5px;
 	}
 
 	.nav__list{
-		justify-content: center;
+		padding-inline-start: 0px;
 	}
 	.service-card{
-		min-width: 400px;
-		max-width: 400px;
+		min-width: 300px;
+		max-width: 300px;
 	}
 
+	.flex{
+		flex-direction: column;
+	}
+	.header__title{
+		font-size: 2.2em
+	}
+	.about-text{
+		min-width: 300px
+	}
+
+	.card{
+		min-width: 300px;
+		max-width: 300px;
+	}
+
+	.service{
+		padding-left: 1em;
+		padding-right: 1em;
+	}
+
+	.footer{
+		padding: 0.5em;
+	}
 }
