--- a/css/style.css
+++ b/css/style.css
@@ -290,12 +290,16 @@ body{
 @media screen and (max-width: 600px){
 
 	.nav{
-	margin-left: -20px
+	padding-right: 0.2em;
+	padding-left: 0.2em;
+	position: relative;
+
 	}
 	.nav__list-item{
 	padding: 0.5em;
 	border-radius: 7px;
 	margin-left: 5px;
+	font-size: 14px
 	}
 
 	.nav__list{
@@ -329,12 +333,4 @@ body{
 	.footer{
 		padding: 0.5em;
 	}
-}
-
-@media screen and (max-width: 350px){
-
-	.nav{
-	margin-left: -35px
-	}
-
 }
